--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Serif);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
+/*
+TODO: ACTIVE PAGE HIGHLIGHT
+TODO: QUESTIONS ANSWER INDICATOR
+*/
+
 :root {
     --blue: #0d6efd;
     --darkerBlue: #1057c2;
@@ -9,6 +14,11 @@
     --navGrey: #c0c0c0;
     --footerHover: #a5a5a5;
     --footerGrey: #292C33;
+
+    --wrongAnswerBackground: rgba(220, 53, 69, 0.2);
+    --rightAnswerBackground: rgba(25, 135, 84, 0.2);
+    --enoughAnswerBackground: rgba(255, 193, 7,0.2);
+
 }
 
 /* ----Navbar----------------------------------------- */
@@ -19,7 +29,7 @@
     font-family: "Source Sans Pro";
     font-weight: bold;
     background-color: var(--blue);
-    padding: 1%;
+    padding: 1rem;
     margin: 0 0 1% 0;
 }
 
@@ -73,6 +83,7 @@ input[type=text] {
     border-style: solid;
     border-radius: 3px;
     margin-top: 0.5rem;
+    width: 14rem;
 }
 
 input[type=text]:focus {
@@ -93,7 +104,28 @@ input[type=checkbox]:checked {
 }
 
 .question {
-    margin: 0 0 2% 0;
+    margin: 0 0 1.5rem 0;
+    padding: 1%;
+    border-radius: 3px;
+}
+
+.resultDiv {
+    margin: 1.0rem 0 1.0rem 0;
+    padding: 0.2%;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.right {
+    background-color: var(--rightAnswerBackground);
+}
+
+.wrong {
+    background-color: var(--wrongAnswerBackground);
+}
+
+.enough {
+    background-color: var(--enoughAnswerBackground);
 }
 
 /* ----Footer----------------------------------------- */
@@ -128,7 +160,7 @@ input[type=checkbox]:checked {
     padding-top: 0.8%;
 }
 
-.footer a:link, a:visited, a:active  {
+.footer a:link, a:visited, a:active {
     text-decoration: none;
 }
 
@@ -148,6 +180,10 @@ input[type=checkbox]:checked {
 .mainDiv {
     margin: 0 15%;
     font-family: "Noto Sans";
+}
+
+.headerText {
+    font-family: "Source Sans Pro";
 }
 
 .icon {
