--- a/index.css
+++ b/index.css
@@ -23,6 +23,12 @@ TODO: QUESTIONS ANSWER INDICATOR
 
 /* ----Navbar----------------------------------------- */
 
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 .navbar {
     display: flex;
     vertical-align: bottom;
@@ -179,6 +185,7 @@ input[type=checkbox]:checked {
 
 .mainDiv {
     margin: 0 15%;
+    margin-top: 5rem;
     font-family: "Noto Sans";
 }
 
