--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 
 /*
-TODO: Correct index highlight
+TODO: Better Scroll
 */
 
 :root {
@@ -272,7 +272,14 @@ body {
 
 .linkButton {
     font-family: "Noto Sans";
+    border: none;
     color: black;
+    
+    margin-top: 0.2rem;
+
+    text-decoration: underline;
+    text-decoration-color: var(--blue);
+    text-decoration-thickness: 2px;
 }
 
 .linkButton:link, .linkButton:visited, .linkButton:active {
@@ -282,7 +289,6 @@ body {
 
 .linkButton:hover {
     cursor: pointer;
-    text-decoration: solid;
     background-color: var(--blue);
     transition: background-color 0.3s;
 }
@@ -309,7 +315,7 @@ body {
     }
 }
 
-@media (max-width:450px) {
+@media (max-width:470px) {
     .mainDiv {
         margin: 0 5%;
         margin-bottom: 1.5rem;
