--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ TODO: Better Scroll
 :root {
     --blue: #0d6efd;
     --darkerBlue: #1057c2;
+    --lighterBlue: #a3c8ff;
     --navHover: #ffffff;
     --navGrey: #d3d3d3;
     --footerHover: #a5a5a5;
@@ -247,6 +248,10 @@ body {
     display: flex;
     flex-wrap: wrap; 
     text-align: justify;
+}
+
+*::selection {
+    background-color: var(--lighterBlue);
 }
 
 .icon {
