--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 @import url(https://fonts.googleapis.com/css?family=Archivo+Black);
 
-
-/*
-TODO: Better Scroll
-*/
-
 :root {
     --blue: #0d6efd;
     --darkerBlue: #1057c2;
@@ -269,6 +264,7 @@ body {
     border-radius: 8px;
     margin: 1% 0 1% 25%;
     width: 50%;
+    box-shadow: 0 0 3px var(--footerGrey);
 }
 
 .onPage {
